<resources>
    <string name="app_name">Game Backlog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>


    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="invalid_title">The title can not be blank.</string>
    <string name="invalid_platform">The platform can not be blank.</string>
    <string name="invalid_date">Please provide a valid date</string>

    <string name="release">Released: %1$d %2$s %3$d</string>
</resources>
